<resources>
    <string name="app_name">Fake Quera</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="passwordHint">Password</string>
    <string name="usernameHint">Username</string>
    <string name="loginButtonText">Log in</string>
    <string name="nameHint">Your Name</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="studentNumberHint">Your Student Number</string>
    <string name="universityHint">Your University Name</string>
    <string name="signupButtonText">Sign Up</string>
    <string name="dialogeCancleText">Cancle</string>
    <string name="dialogOKText">OK</string>
    <string name="inputHint">Input</string>
    <string name="logoutMessage">Logging Out</string>
    <string name="logoutWarning">Do you want to log out ?</string>
    <string name="addNewClass">Add new class</string>
    <string name="addNewQuestion">Add new Question</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionName">Enter Question Name</string>
    <string name="questionContent">Enter content of Question</string>
    <string name="your_answer">Your answer</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="profileUsername">UserName</string>
    <string name="profileName">Name</string>
    <string name="profileUniversity">University</string>
    <string name="profileNumberOfClass">Number of classes</string>
    <string name="question">Question</string>
    <string name="submits">Submits</string>
    <string name="allClasses">All Classes</string>
    <string name="joinedClasses">Joined Classes</string>
    <string name="join">Join into the class</string>
    <string name="not_found_teacher">Teacher Not Found!</string>
    <string name="scoreHint">Your Score</string>
    <string name="rename">Rename</string>
    <string name="emptyWarning">Should not be empty.</string>
</resources>