<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#F8E68B"
    tools:context=".AddClassDialogFragment"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogeinput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/inputHint"
        android:paddingHorizontal="@dimen/component_horizontal_padding"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogInputText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/renameButton"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginHorizontal="@dimen/component_horizontal_padding"

            android:text="@string/dialogeCancleText" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginHorizontal="@dimen/component_horizontal_padding"

            android:text="@string/dialogOKText" />
    </LinearLayout>


</LinearLayout>